--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "microbit-dal"]
 	path = microbit-dal
-	url = git@github.com:lancaster-university/microbit-dal.git
+	url = https://github.com/lancaster-university/microbit-dal.git
